--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "antd": "^5.4.6",
+    "@ant-design/pro-components": "^2.4.14",
+    "@apollo/client": "^3.7.14",
+    "antd": "^5.4.7",
+    "graphql": "^16.6.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
