--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login -u starksim -p ${{ secrets.DOCKER_HUB_SECRET }}
+        docker login -u admin -p ${{ secrets.HARBOR_SECRET }} harbor.rosabi.cn
         docker buildx create --use
-        docker buildx build . --platform=linux/amd64,linux/arm64 --file Dockerfile --push --tag starksim/avalon_react:latest
+        docker buildx build . --platform=linux/amd64,linux/arm64 --file Dockerfile --push --tag harbor.rosabi.cn/library/starksim/avalon_react:latest
