--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Configure DNS
+      run: echo "nameserver tennis.dnspod.net" | sudo tee /etc/resolv.conf
+
+    - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login 159.75.243.79:8000 -u admin -p ${{ secrets.HARBOR_SECRET }} 
+        docker login harbor.rosabi.cn -u admin -p ${{ secrets.HARBOR_SECRET }} 
         docker buildx create --use
         docker buildx build . --platform=linux/amd64,linux/arm64 --file Dockerfile --push --tag harbor.rosabi.cn/library/starksim/avalon_react:latest
