--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        echo "nameserver tennis.dnspod.net" | sudo tee /etc/resolv.conf
-        echo "nameserver seven.dnspod.net | sudo tee -a /etc/resolv.conf"
-        echo "nameserver 8.8.8.8 | sudo tee -a /etc/resolv.conf"
-        echo "nameserver 8.8.4.4 | sudo tee -a /etc/resolv.conf"
+        echo "nameserver 119.29.29.29" | sudo tee /etc/resolv.conf
         
         docker login harbor.rosabi.cn -u admin -p ${{ secrets.HARBOR_SECRET }} 
         docker buildx create --use
