fix: use docke login-action@v1

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: docker/login-action@v1
       with:
-        registry: harbor.example.cn
+        registry: harbor.rosabi.cn
         username: admin
         password: ${{ secrets.HARBOR_SECRET }}
 
