feat: update docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   app:
-    image: starksim/avalon_react
+    image: harbor.rosabi.cn/library/avalon_react
     ports:
         - "127.0.0.1:82:3000"
     # volumes:
