--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login harbor.rosabi.cn -u admin -p ${{ secrets.HARBOR_SECRET }}
+        docker login -u starksim -p ${{ secrets.DOCKERHUB_SECRET }}
         docker buildx create --use
-        docker buildx build . --platform=linux/amd64,linux/arm64 --file Dockerfile --push --tag harbor.rosabi.cn/library/avalon_react:latest
+        docker buildx build . --platform=linux/amd64 --file Dockerfile --push --tag starksim/avalon_react:latest
